...
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:paddingStart="10dp"
    android:paddingEnd="10dp">

    <CheckBox
        android:id="@+id/track_selected"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/iv_cover"
...
